[project]
name = "md-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "markdown2>=2.5.4",
    "pygments>=2.19.2",
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
    "weasyprint>=66.0",
]
